--- a/lesson8/tableBuild.html
+++ b/lesson8/tableBuild.html
@@ -29,38 +29,38 @@
 
             </tr>
             <tr>
-                <th>Period</th>
-                <th>Sales</th>
-                <th>Sales Goal</th>
+                <th scope="col">Period</th>
+                <th scope="col">Sales</th>
+                <th scope="col">Sales Goal</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td class="data">August</td>
+                <td scope="row" class="data">August</td>
                 <td class="data">$3,590</td>
                 <td class="data">$4,000</td>
             </tr>
             <tr>
-                <td class="data">September</td>
+                <td scope="row" class="data">September</td>
                 <td class="data">$4,420</td>
                 <td class="data">$5,000</td>
             </tr>
             <tr>
-                <td class="data">October</td>
+                <td scope="row" class="data">October</td>
                 <td class="data">$4,870</td>
                 <td class="data">$5,000</td>
             </tr>
             <tr>
-                <td class="data">November</td>
+                <td scope="row" class="data">November</td>
                 <td class="data">$8,610</td>
                 <td class="data" id="currentGoal">7,500</td>
             </tr>
             <tr>
-                <td class="data">Black Friday</td>
+                <td scope="row" class="data"><i>Black Friday</i></td>
                 <td class="data" colspan="2">$3,200</td>
             </tr>
             <tr>
-                <td class="data">December</td>
+                <td scope="row" class="data">December</td>
                 <td class="data">$6,820</td>
                 <td class="data">$7,500</td>
             </tr>
