--- a/lesson8/tableBuild.html
+++ b/lesson8/tableBuild.html
@@ -25,7 +25,7 @@
     <table>
         <thead>
             <tr>
-                <th id="header" colspan="3">ACME Wildwest</th>
+                <th id="header" colspan="3" scope="colgroup">ACME Wildwest</th>
 
             </tr>
             <tr>
