--- a/chamber/index.html
+++ b/chamber/index.html
@@ -154,8 +154,10 @@
             </div>
             <div class="weather-div">
                 <h2>Item 2: Weather</h2>
-                <img src="chamber/images/669958_weather_cloud_forecast_sun_icon.png">
+                <div class="weatherGroup">
+                    <img id="weatherImg" src="chamber/images/669958_weather_cloud_forecast_sun_icon.png">
 
+                </div>
             </div>
         </div>
     </div>
