--- a/lesson9/prophets.html
+++ b/lesson9/prophets.html
@@ -9,7 +9,6 @@
     <title>Prophets</title>
     <!-- STYLE SHEETS -->
     <link href="prophets.css" rel="stylesheet">
-    <link href="prophets.js" rel="stylesheet">
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,8 +20,9 @@
     <h1>Latter-day Prophets</h1>
 </header>
 <main>
-    <div class="cards"></div>
+    <div class="cards grid"></div>
 </main>
+<script src="prophets.js"></script>
 <footer>
     Your name here | 🏛 BYU-Idaho | WDD 230
 </footer>
