--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             <li>
                 <p>Lesson 09:</p>
                 <a href="lesson_9.html ">The Business Directory Page</a>
+                <a href="lesson9/prophets.html">Latter-Day Prophets</a>
             </li>
             <li>
                 <p>Lesson 10:</p>
