--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </li>
             <li>
                 <p>Lesson 09:</p>
-                <a href="lesson_9.html ">The Business Directory Page</a>
+                <a href="lesson_9.html ">The Business Directory Page</a><br>
                 <a href="lesson9/prophets.html">Latter-Day Prophets</a>
             </li>
             <li>
