--- a/lesson8/tableBuild.html
+++ b/lesson8/tableBuild.html
@@ -53,7 +53,7 @@
             <tr>
                 <td scope="row" class="data">November</td>
                 <td class="data">$8,610</td>
-                <td class="data" id="currentGoal">7,500</td>
+                <td class="data" id="currentGoal">$7,500</td>
             </tr>
             <tr>
                 <td scope="row" class="data"><i>Black Friday</i></td>
