--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -39,7 +39,7 @@
                 <a class="active" href="discover.html">Discover</a>
             </li>
             <li>
-                <a class="active" href="#">Directory</a>
+                <a class="active" href="directory.html">Directory</a>
             </li>
             <li>
                 <a class="active" href="../join/join.html">Join</a>
