--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -62,8 +62,8 @@
 
     </nav>
     <div class="date">
-        <p id="message"><span id="message"></span></p>
-        <p id="p-date"><span id="date"></span></p>
+        <p><span id="message"></span></p>
+        <p id="p-date"><span class="date"></span></p>
     </div>
 </header>
 
@@ -98,8 +98,7 @@
         </li>
     </ul>
     <p class="js">
-        &copy;2022 | name of website | Nikkolet Ashby | WDD 230 Project | Last Updated: <span id="date"></span></p>
-
+        &copy;2022 | name of website | Nikkolet Ashby | WDD 230 Project | Last Updated: <span class="date"></span></p>
 </footer>
 
 </html>
