--- a/chamber/index.html
+++ b/chamber/index.html
@@ -116,7 +116,7 @@
         <div class="spotlight" id="spotlight">
             <div id="spot1">
                 <h2>Hogwarts Express</h2>
-                <img class="div-image" src="images/2730340_colour_express_harry_hogwarts_potter_icon.png" alt="hogwarts train">
+                <img class="div-image" id="train" src="images/2730340_colour_express_harry_hogwarts_potter_icon.png" alt="hogwarts train">
                 <p>We're here to get you at Platform 9 3/4 @ 11am.</p>
                 <hr>
                 <p>hogwarts-transport.com<br> +1(605)475-6961 | <a href="#">Website</a></p>
