--- a/chamber/index.html
+++ b/chamber/index.html
@@ -61,7 +61,7 @@
 
     </nav>
     <div class="date">
-        <p id="message"><span id="message"></span></p>
+        <p><span id="message"></span></p>
         <p id="p-date"><span class="date"></span></p>
     </div>
 </header>
