--- a/chamber/index.html
+++ b/chamber/index.html
@@ -20,184 +20,188 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Sansita&family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="icon" href="images/2730327_colour_harry_hogwarts_house_potter_icon.png">
 </head>
-<header>
-    <img class="logo-img" id="header-img" src="images/2730327_colour_harry_hogwarts_house_potter_icon.png" alt="logo">
-    <ul class="company">
-        <li>
-            <h1>Harry Potter</h1>
-            <p>and the Chamber of Commerce</p>
-        </li>
-    </ul>
 
-
-    <nav class="nav">
-        <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
-        <ul id="primaryNav">
-
-            <li>
-                <a class="active" href="discover.html">Discover</a>
-            </li>
-            <li>
-                <a class="active" href="directory.html">Directory</a>
-            </li>
-            <li>
-                <a class="active" href="../join/join.html">Join</a>
-            </li>
-            <li>
-                <a class="active" href="#">Contact</a>
-            </li>
-
-        </ul>
-        <ul class="icons">
-            <li>
-                <a href="https://www.facebook.com/" target="_blank">
-                    <img id="facebook" src="images/facebook-icon.png" alt="facebook Icon"></a>
-            </li>
-            <li>
-                <a href="https://www.linkedin.com/in/nikkolet-ashby-418757161/" target="_blank">
-                    <img id="linkedin" src="images/3225190_app_linkedin_logo_media_popular_icon.png" alt="LinkedIn Icon"></a>
-            </li>
-        </ul>
-
-    </nav>
-    <div class="date">
-        <p><span id="message"></span></p>
-        <p id="p-date"><span class="date"></span></p>
-    </div>
-</header>
 
 <body>
-    <div class="grid">
-        <div class="event large-div">
-            <h2>Triwizard Tournament</h2>
-            <img class="div-image" src="images/2730338_colour_dragon_egg_harry_magic_icon.png" alt="Dragon Egg">
-            <p>The first task in the Triwizard Tournament is complete!<br> Now our contestants will have to figure out what the next task is. <a href="https://harrypotter.fandom.com/wiki/Golden_egg">more info...</a></p>
+    <header>
+        <img class="logo-img" id="header-img" src="images/2730327_colour_harry_hogwarts_house_potter_icon.png" alt="logo">
+        <ul class="company">
+            <li>
+                <h1>Harry Potter</h1>
+                <p>and the Chamber of Commerce</p>
+            </li>
+        </ul>
 
 
+        <nav class="nav">
+            <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
+            <ul id="primaryNav">
 
+                <li>
+                    <a class="active" href="discover.html">Discover</a>
+                </li>
+                <li>
+                    <a class="active" href="directory.html">Directory</a>
+                </li>
+                <li>
+                    <a class="active" href="../join/join.html">Join</a>
+                </li>
+                <li>
+                    <a class="active" href="#">Contact</a>
+                </li>
+
+            </ul>
+            <ul class="icons">
+                <li>
+                    <a href="https://www.facebook.com/" target="_blank">
+                        <img id="facebook" src="images/facebook-icon.png" alt="facebook Icon"></a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/nikkolet-ashby-418757161/" target="_blank">
+                        <img id="linkedin" src="images/3225190_app_linkedin_logo_media_popular_icon.png" alt="LinkedIn Icon"></a>
+                </li>
+            </ul>
+
+        </nav>
+        <div class="divdate">
+            <p><span id="message"></span></p>
+            <p id="p-date" class="date"></p>
         </div>
-        <div class="weather large-div">
-            <h1 id="weather">Weather</h1>
-            <p id="weather-info">
-                <img class="div-image" src="images/669958_weather_cloud_forecast_sun_icon.png" alt="Weather" />
-                <form id="wind">
-                    <label for="temp">Avg Temp:
+    </header>
+    <main>
+        <div class="grid">
+            <div class="event large-div">
+                <h2>Triwizard Tournament</h2>
+                <img class="div-image" src="images/2730338_colour_dragon_egg_harry_magic_icon.png" alt="Dragon Egg">
+                <p>The first task in the Triwizard Tournament is complete!<br> Now our contestants will have to figure out what the next task is. <a href="https://harrypotter.fandom.com/wiki/Golden_egg">more info...</a></p>
+
+
+
+            </div>
+            <div class="weather large-div">
+                <h1 id="weather">Weather</h1>
+                <p id="weather-info">
+                    <img class="div-image" src="images/669958_weather_cloud_forecast_sun_icon.png" alt="Weather" />
+                    <form id="wind">
+                        <label for="temp">Avg Temp:
                 <input id="temp" type="number" name="Temp">
                 </label>
-                    <label for="windSpeed">Wind Speed:
+                        <label for="windSpeed">Wind Speed:
                 <input id="windSpeed" type="number" name="windSpeed">
                 </label><br>
-                    <input class="button" type="button" value="Find Wind Chill">
-                </form class="weather-form"><br> Wind Chill: <span id="windChill"></span>
-            </p>
-        </div>
-        <div class="join">
-
-            <a href="../join/join.html"></a><button class="button">Join Us!</button></a>
-
-            <p>Discover how to join the magical world of Harry Potter and the Chamber of Commerece and how it will benefit your organization!</p>
-        </div>
-        <div class="hero">
-            <h2 class="hero-text">Welcome to Hogwarts</h2>
-            <img id="rexburg-img" src="images/wdd230-org.jpg" alt="Chamber of Commerce Homebase">
-
-        </div>
-        <div class="news">
-            <h2>The Daily Prophet</h2>
-            <h3>He-Who-Must-Not-Be-Named Returns!</h3>
-            <i>Nymphadora
-                Abbott</i>
-            <p>"He's back." <br>-Cornelius Fudge</p>
-            <p>In a brief statement Friday night, Minister for Magic Cornelius Fudge confirmed that He-Who-Must-Not-Be Named has returned to this country and is active once more. "It is with great regret that I must confirm that the wizard styling himself
-                Lord - well, you know who I mean - is alive and among us again," said Fudge, looking tired and flustered as he addressed reporters. "It is with almost equal regret that we report the mass revolt of the Dementors of Azkaban, who have shown
-                themselves averse to continuing in the Ministry's employ. We believe that the dementors are currently taking direction from Lord - Thingy. We urge the magical population to remain vigilant. The Ministry is currently publishing guides to
-                elementary home and personal defense that will be delivered free to all wizarding homes within the coming month."<br><a href="https://harry-potter-compendium.fandom.com/wiki/Daily_Prophet_articles#HE-WHO-MUST-NOT-BE-NAMED_RETURNS_(June_19,_1996)">read more...</a></p>
-        </div>
-        <div class="spotlight" id="spotlight">
-            <div id="spot1">
-                <h2>Hogwarts Express</h2>
-                <img class="div-image" id="train" src="images/2730340_colour_express_harry_hogwarts_potter_icon.png" alt="hogwarts train">
-                <p>We're here to get you at Platform 9 3/4 @ 11am.</p>
-                <hr>
-                <p>hogwarts-transport.com<br> +1(605)475-6961 | <a href="#">Website</a></p>
-            </div>
-            <div id="spot2">
-                <h2>Charms Club</h2>
-
-                <img class="div-image" src="images/2730324_colour_feather_harry_potter_quill_icon.png" alt="feather">
-                <p>Tuesdays @ 5pm - 6pm in the Charms classroom.</p>
-
-                <p><strong>Keeep Calm</strong><br>and<br>Swish and Flick</p>
-                <hr>
-
-                <p>ffitwick@hogwartsstaff.org<br> +1(395)384-2794 | <a href="#">Website</a></p>
-
-            </div>
-            <div id="spot3">
-                <h2>Werewolf Awareness Wednesdays</h2>
-                <img class="div-image" src="images/2730322_colour_harry_potter_sirius_wolf_icon.png" alt="wolf howling at moon">
-                <br>
-                <i>"Being a werewolf bites...But you are not alone." ~ Professor R. J. Lupin</i>
-                <p>If you or someone you love suffers from lycanthropy, please come and learn more.</p>
-                <hr>
-                <p>Wednesdays @ 7PM - 8PM in the Defense Against the Dark Arts Room<br>Please Note: Times may change abruptly.
+                        <input class="button" type="button" value="Find Wind Chill">
+                    </form class="weather-form"><br> Wind Chill: <span id="windChill"></span>
                 </p>
-                <hr>
-                <p>rlupin@hogwarts-staff.org <br>+1(801)239-5627 | <a href="#">Website</a></p>
             </div>
-        </div>
+            <div class="join">
 
-        <div class="medium-div">
-            <div class="event">
-                <h2>Item 1: Event</h2>
+                <a href="../join/join.html"></a><button class="button">Join Us!</button></a>
+
+                <p>Discover how to join the magical world of Harry Potter and the Chamber of Commerece and how it will benefit your organization!</p>
+            </div>
+            <div class="hero">
+                <h2 class="hero-text">Welcome to Hogwarts</h2>
+                <img id="rexburg-img" src="images/wdd230-org.jpg" alt="Chamber of Commerce Homebase">
 
             </div>
-            <div class="weather-div">
-                <h2>Item 2: Weather</h2>
-                <div class="weatherGroup">
-                    <h1 id="weather">Weather</h1>
-                    <p id="weather-info">
-                        <img class="div-image" src="images/669958_weather_cloud_forecast_sun_icon.png" alt="Weather" />
-                        <form id="wind">
-                            <label for="temp">Avg Temp:
+            <div class="news">
+                <h2>The Daily Prophet</h2>
+                <h3>He-Who-Must-Not-Be-Named Returns!</h3>
+                <i>Nymphadora
+                Abbott</i>
+                <p>"He's back." <br>-Cornelius Fudge</p>
+                <p>In a brief statement Friday night, Minister for Magic Cornelius Fudge confirmed that He-Who-Must-Not-Be Named has returned to this country and is active once more. "It is with great regret that I must confirm that the wizard styling himself
+                    Lord - well, you know who I mean - is alive and among us again," said Fudge, looking tired and flustered as he addressed reporters. "It is with almost equal regret that we report the mass revolt of the Dementors of Azkaban, who have
+                    shown themselves averse to continuing in the Ministry's employ. We believe that the dementors are currently taking direction from Lord - Thingy. We urge the magical population to remain vigilant. The Ministry is currently publishing
+                    guides to elementary home and personal defense that will be delivered free to all wizarding homes within the coming month."<br><a href="https://harry-potter-compendium.fandom.com/wiki/Daily_Prophet_articles#HE-WHO-MUST-NOT-BE-NAMED_RETURNS_(June_19,_1996)">read more...</a></p>
+            </div>
+            <div class="spotlight" id="spotlight">
+                <div id="spot1">
+                    <h2>Hogwarts Express</h2>
+                    <img class="div-image" id="train" src="images/2730340_colour_express_harry_hogwarts_potter_icon.png" alt="hogwarts train">
+                    <p>We're here to get you at Platform 9 3/4 @ 11am.</p>
+                    <hr>
+                    <p>hogwarts-transport.com<br> +1(605)475-6961 | <a href="#">Website</a></p>
+                </div>
+                <div id="spot2">
+                    <h2>Charms Club</h2>
+
+                    <img class="div-image" src="images/2730324_colour_feather_harry_potter_quill_icon.png" alt="feather">
+                    <p>Tuesdays @ 5pm - 6pm in the Charms classroom.</p>
+
+                    <p><strong>Keeep Calm</strong><br>and<br>Swish and Flick</p>
+                    <hr>
+
+                    <p>ffitwick@hogwartsstaff.org<br> +1(395)384-2794 | <a href="#">Website</a></p>
+
+                </div>
+                <div id="spot3">
+                    <h2>Werewolf Awareness Wednesdays</h2>
+                    <img class="div-image" src="images/2730322_colour_harry_potter_sirius_wolf_icon.png" alt="wolf howling at moon">
+                    <br>
+                    <i>"Being a werewolf bites...But you are not alone." ~ Professor R. J. Lupin</i>
+                    <p>If you or someone you love suffers from lycanthropy, please come and learn more.</p>
+                    <hr>
+                    <p>Wednesdays @ 7PM - 8PM in the Defense Against the Dark Arts Room<br>Please Note: Times may change abruptly.
+                    </p>
+                    <hr>
+                    <p>rlupin@hogwarts-staff.org <br>+1(801)239-5627 | <a href="#">Website</a></p>
+                </div>
+            </div>
+
+            <div class="medium-div">
+                <div class="event">
+                    <h2>Item 1: Event</h2>
+
+                </div>
+                <div class="weather-div">
+                    <h2>Item 2: Weather</h2>
+                    <div class="weatherGroup">
+                        <h1 id="weather">Weather</h1>
+                        <p id="weather-info">
+                            <img class="div-image" src="images/669958_weather_cloud_forecast_sun_icon.png" alt="Weather" />
+                            <form id="wind">
+                                <label for="temp">Avg Temp:
                         <input id="temp" type="number" name="Temp">
                         </label>
-                            <label for="windSpeed">Wind Speed:
+                                <label for="windSpeed">Wind Speed:
                         <input id="windSpeed" type="number" name="windSpeed">
                         </label><br>
-                            <input class="button" type="button" value="Find Wind Chill">
-                        </form class="weather-form"><br> Wind Chill: <span id="windChill"></span>
-                    </p>
+                                <input class="button" type="button" value="Find Wind Chill">
+                            </form class="weather-form"><br> Wind Chill: <span id="windChill"></span>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </main>
     <script src="js/script.js"></script>
     <script src="js/windchill.js"></script>
-</body>
-<footer>
-    <div class="logo-address">
-        <img class="logo-img footer-img" src="images/2730327_colour_harry_hogwarts_house_potter_icon.png" alt="logo">
-        <ul class="footer-company">
-            <li>
-                <h1>Learning Chamber of Commerce</h1>
-            </li>
-            <li>
-                <p>Salt Lake Chamber, 201 S Main St #2300,<br>Salt Lake City,UT 84111</p>
+
+    <footer>
+        <div class="logo-address">
+            <img class="logo-img footer-img" src="images/2730327_colour_harry_hogwarts_house_potter_icon.png" alt="logo">
+            <ul class="footer-company">
+                <li>
+                    <h1>Learning Chamber of Commerce</h1>
+                </li>
+                <li>
+                    <p>Salt Lake Chamber, 201 S Main St #2300,<br>Salt Lake City,UT 84111</p>
+                </li>
+            </ul>
+        </div>
+        <ul class="contact">
+            <li>nikkoletashby@gmail.com</li>
+            <li>+1(801)231-3935</li>
+            <li class="map">
+                <a href="https://www.google.com/maps/place/Salt+Lake+Chamber/@40.7645262,-111.892769,17z/data=!3m2!4b1!5s0x87528a3aa97113a7:0xdb61b5943e1a7aa1!4m5!3m4!1s0x8752f513d6f6ab15:0x4be5eda424cce15a!8m2!3d40.7645222!4d-111.8905803"><img id="map" src="images/pin.png" alt="Location Map"></a>
+                <p>Map Location</p>
             </li>
         </ul>
-    </div>
-    <ul class="contact">
-        <li>nikkoletashby@gmail.com</li>
-        <li>+1(801)231-3935</li>
-        <li class="map">
-            <a href="https://www.google.com/maps/place/Salt+Lake+Chamber/@40.7645262,-111.892769,17z/data=!3m2!4b1!5s0x87528a3aa97113a7:0xdb61b5943e1a7aa1!4m5!3m4!1s0x8752f513d6f6ab15:0x4be5eda424cce15a!8m2!3d40.7645222!4d-111.8905803"><img id="map" src="images/pin.png" alt="Location Map"></a>
-            <p>Map Location</p>
-        </li>
-    </ul>
-    <p class="js">
-        &copy;2022 | name of website | Nikkolet Ashby | WDD 230 Project | Last Updated: <span class="date"></span></p>
+        <p class="js">
+            &copy;2022 | name of website | Nikkolet Ashby | WDD 230 Project | Last Updated: <span class="date"></span></p>
 
-</footer>
+    </footer>
+</body>
 
 </html>
