--- a/chamber/index.html
+++ b/chamber/index.html
@@ -199,7 +199,7 @@
             </li>
         </ul>
         <p class="js">
-            &copy;2022 | name of website | Nikkolet Ashby | WDD 230 Project | Last Updated: <span class="date"></span></p>
+            &copy;2022 | name of website | Nikkolet Ashby | WDD 230 Project | Last Updated: <span id="lastmotified"></span></p>
 
     </footer>
 </body>
