--- a/chamber/index.html
+++ b/chamber/index.html
@@ -151,7 +151,11 @@
 
             <div class="medium-div">
                 <div class="event">
-                    <h2>Item 1: Event</h2>
+                    <h2>Triwizard Tournament</h2>
+                    <img class="div-image" src="images/2730338_colour_dragon_egg_harry_magic_icon.png" alt="Dragon Egg">
+                    <p>The first task in the Triwizard Tournament is complete!<br> Now our contestants will have to figure out what the next task is. <a href="https://harrypotter.fandom.com/wiki/Golden_egg">more info...</a></p>
+
+
 
                 </div>
                 <div class="weather-div">
@@ -175,15 +179,14 @@
             </div>
         </div>
     </main>
-    <script src="js/script.js"></script>
-    <script src="js/windchill.js"></script>
+
 
     <footer>
         <div class="logo-address">
             <img class="logo-img footer-img" src="images/2730327_colour_harry_hogwarts_house_potter_icon.png" alt="logo">
             <ul class="footer-company">
                 <li>
-                    <h1>Learning Chamber of Commerce</h1>
+                    <h1>Harry Potter and the Chamber of Commerce</h1>
                 </li>
                 <li>
                     <p>Salt Lake Chamber, 201 S Main St #2300,<br>Salt Lake City,UT 84111</p>
@@ -199,9 +202,11 @@
             </li>
         </ul>
         <p class="js">
-            &copy;2022 | name of website | Nikkolet Ashby | WDD 230 Project | Last Updated: <span id="lastmotified"></span></p>
+            &copy;2022 | Harry Potter and the Chamber of Commerce | Nikkolet Ashby | WDD 230 Project | Last Updated: <span id="lastmodified"></span></p>
 
     </footer>
+    <script src="js/script.js"></script>
+    <script src="js/windchill.js"></script>
 </body>
 
 </html>
