--- a/chamber/index.html
+++ b/chamber/index.html
@@ -149,14 +149,11 @@
                 </div>
             </div>
 
-            <div class="medium-div">
+            <div id="medium-div">
                 <div class="event">
                     <h2>Triwizard Tournament</h2>
                     <img class="div-image" src="images/2730338_colour_dragon_egg_harry_magic_icon.png" alt="Dragon Egg">
                     <p>The first task in the Triwizard Tournament is complete!<br> Now our contestants will have to figure out what the next task is. <a href="https://harrypotter.fandom.com/wiki/Golden_egg">more info...</a></p>
-
-
-
                 </div>
                 <div class="weather-div">
                     <h2>Item 2: Weather</h2>
