--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
             </li>
             <li>
                 <p>Lesson 10:</p>
-                <a href="lesson_10.html ">Using the Weather API</a>
+                <a href="chamber/weather-api.html">Weather API Activity</a><br>
+                <a href="chamber/index.html">Weather API Assignment</a>
+
             </li>
             <li>
                 <p>Lesson 11:</p>
