--- a/chamber/index.html
+++ b/chamber/index.html
@@ -153,11 +153,11 @@
                 </div>
                 <div class="weather-div">
                     <div id="weather-div">
-                        <p>The current temperature in West Valley City, Utah is <span id="current-temp"></span> &deg;F</p>
+                        <p>The current temperature in West Valley City, Utah is <span id="current-temp1"></span> &deg;F</p>
                         <h2>Current Condition Icon</h2>
                         <figure>
-                            <img src="" alt="" id="weather-icon" />
-                            <figcaption></figcaption>
+                            <img src="" alt="" id="weather-icon1" />
+                            <figcaption id="figcaption1"></figcaption>
                         </figure>
                     </div>
                 </div>
