--- a/chamber/index.html
+++ b/chamber/index.html
@@ -44,7 +44,7 @@
                     <a class="active" href="directory.html">Directory</a>
                 </li>
                 <li>
-                    <a class="active" href="../join/join.html">Join</a>
+                    <a class="active" href="join.html">Join</a>
                 </li>
                 <li>
                     <a class="active" href="#">Contact</a>
@@ -91,7 +91,7 @@
             </div>
             <div class="join">
 
-                <a href="../join/join.html"></a><button class="button">Join Us!</button></a>
+                <a href="join.html"></a><button class="button">Join Us!</button></a>
 
                 <p>Discover how to join the magical worldof Harry Potter and the Chamber of Commerece and how it will benefit your organization!</p>
             </div>
