--- a/chamber/join.html
+++ b/chamber/join.html
@@ -78,6 +78,7 @@
                 <label class="top">Phone<input type="tel" name="phone" placeholder="1235551234"></label>
                 <label class="top">Email<input type="email" name="email" placeholder="johndoe@gmail.com"></label>
                 <label class="top">Title<input type="text" name="text" placeholder="Business Position"></label>
+                <label class="top">Business Name<input type="text" name="text" placeholder="Business Name"></label>
             </fieldset>
             <fieldset>
                 <legend>Choose A Membership</legend>
