--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -35,10 +35,10 @@
         <ul id="primaryNav">
 
             <li>
-                <a class="active" href="#">Discover</a>
+                <a class="active" href="discovery.html">Discover</a>
             </li>
             <li>
-                <a class="active" href="#">Directory</a>
+                <a class="active" href="directory.html">Directory</a>
             </li>
             <li>
                 <a class="active" href="#">Join</a>
