--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </li>
             <li>
                 <p>Lesson 08:</p>
-                <a href="join/join.html">Join Page</a><br>
+                <a href="chamber/join.html">Join Page</a><br>
                 <a href="lesson8/tableBuild.html">Activity: Table Build</a>
 
             </li>
