--- a/chamber/index.html
+++ b/chamber/index.html
@@ -193,7 +193,7 @@
     </footer>
     <script src="js/script.js"></script>
     <script src="js/windchill.js"></script>
-    <script src="js/weatherapi.js"></script>
+    <script src="js/weatherapimain.js"></script>
 </body>
 
 </html>
