--- a/chamber/index.html
+++ b/chamber/index.html
@@ -91,7 +91,7 @@
             </div>
             <div class="join">
 
-                <a href="join.html"></a><button class="button">Join Us!</button></a>
+                <a href="join.html"><button class="button">Join Us!</button></a>
 
                 <p>Discover how to join the magical worldof Harry Potter and the Chamber of Commerece and how it will benefit your organization!</p>
             </div>
