--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Chamber Home Page for Nikkolet Ashby in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
-    <title>OpenWeatherMap API</title>
+    <title>Contact</title>
     <!-- STYLE SHEETS -->
     <link href="css/normalize.css" rel="stylesheet">
     <!-- phone-default -->
@@ -69,24 +69,37 @@
         </div>
     </header>
     <main>
-        <h1>OpenWeatherMap.org API</h1>
+        <div>
+            <h1>Contact Info</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, natus?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis, animi!</p>
+            <ul>
+                <li>
+                    <h2>London</h2>
+                    <p>Phone: </p>
+                    <p>Email: </p>
+                </li>
 
-        <div id="weather-div">
-            <p>The current temperature in West Valley City, Utah is <span id="current-temp"></span> &deg;F</p>
-            <h2>Current Condition Icon</h2>
-            <figure>
-                <img src="" alt="" id="weather-icon" />
-                <figcaption></figcaption>
-            </figure>
+            </ul>
+            <li>
+                <h2>London</h2>
+                <p>Phone: </p>
+                <p>Email: </p>
+            </li>
+        </div>
+        <div>
+            <form method="get" action="confirm.html">
+
+            </form>
         </div>
     </main>
+
 
     <footer>
         <div class="logo-address">
             <img class="logo-img footer-img" src="images/2730327_colour_harry_hogwarts_house_potter_icon.png" alt="logo">
             <ul class="footer-company">
                 <li>
-                    <h1>Learning Chamber of Commerce</h1>
+                    <h1>Harry Potter and the Chamber of Commerce</h1>
                 </li>
                 <li>
                     <p>Salt Lake Chamber, 201 S Main St #2300,<br>Salt Lake City,UT 84111</p>
@@ -103,9 +116,11 @@
         </ul>
         <p class="js">
             &copy;2022 | Harry Potter and the Chamber of Commerce | Nikkolet Ashby | WDD 230 Project | Last Updated: <span id="lastmodified"></span></p>
+
     </footer>
-    <script src="js/weatherapi.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/windchill.js"></script>
+    <script src="js/weatherapimain.js"></script>
 </body>
 
 </html>
