--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -96,7 +96,7 @@
         </li>
     </ul>
     <p class="js">
-        &copy;2022 | name of website | Nikkolet Ashby | WDD 230 Project | Last Updated: <span class="date"></span></p>
+        &copy;2022 | Harry Potter and the Chamber of Commerce | Nikkolet Ashby | WDD 230 Project | Last Updated: <span id="lastmodified"></span></p>
 </footer>
 
 </html>
