--- a/chamber/confirm.html
+++ b/chamber/confirm.html
@@ -70,7 +70,7 @@
     <!-- CONTENT HERE -->
     <main>
         <h1>Email Sent Confirmed</h1>
-        <p>Thanks for sending us a message. We will get back to you within a week with a response.</p>
+        <p id="confirm-p">Thanks for sending us a message. We will get back to you within a week with a response.</p>
     </main>
 
     <script src="js/script.js"></script>
