--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -78,10 +78,12 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, natus?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis, animi!</p>
             <ul>
                 <li>
-                    <h2>London</h2>
-                    <p>Address: </p>
-                    <p>Phone: </p>
-                    <p>Email: </p>
+                    <h2>Salt Lake City</h2>
+                    <p><strong>Address:</strong><br>Salt Lake Chamber, 201 S Main St #2300, Salt Lake City,UT 84111</p>
+                    <p><strong>Phone:</strong><br>+1(801)231-3935
+                    </p>
+                    <p><strong>Email:</strong><br>nikkoletashby@gmail.com
+                    </p>
                 </li>
             </ul>
         </div>
