--- a/chamber/confirm.html
+++ b/chamber/confirm.html
@@ -35,7 +35,9 @@
         <nav class="nav">
             <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
             <ul id="primaryNav">
-
+                <li>
+                    <a class="active" href="index.html">Home</a>
+                </li>
                 <li>
                     <a class="active" href="discovery.html">Discover</a>
                 </li>
@@ -43,10 +45,10 @@
                     <a class="active" href="directory.html">Directory</a>
                 </li>
                 <li>
-                    <a class="active" href="#">Join</a>
+                    <a class="active" href="join.html">Join</a>
                 </li>
                 <li>
-                    <a class="active" href="#">Contact</a>
+                    <a class="active" href="contact">Contact</a>
                 </li>
 
             </ul>
