--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -32,18 +32,17 @@
     <nav class="nav">
         <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
         <ul id="primaryNav">
-
+            <li>
+                <a class="active" href="index.html">Home</a>
+            </li>
             <li>
                 <a class="active" href="discover.html">Discover</a>
             </li>
             <li>
-                <a class="active" href="directory.html">Directory</a>
+                <a class="active" href="join.html">Join</a>
             </li>
             <li>
-                <a class="active" href="../join/join.html">Join</a>
-            </li>
-            <li>
-                <a class="active" href="#">Contact</a>
+                <a class="active" href="contact.html">Contact</a>
             </li>
 
         </ul>
