--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -35,13 +35,13 @@
                 <a class="active" href="index.html">Home</a>
             </li>
             <li>
-                <a class="active" href="#">Directory</a>
+                <a class="active" href="directory.html">Directory</a>
             </li>
             <li>
-                <a class="active" href="../join/join.html">Join</a>
+                <a class="active" href="join.html">Join</a>
             </li>
             <li>
-                <a class="active" href="#">Contact</a>
+                <a class="active" href="contact.html">Contact</a>
             </li>
 
         </ul>
