--- a/chamber/join.html
+++ b/chamber/join.html
@@ -33,18 +33,20 @@
     <nav class="nav">
         <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
         <ul id="primaryNav">
-
             <li>
-                <a class="active" href="#">Discover</a>
+                <a class="active" href="index.html">Home</a>
             </li>
             <li>
-                <a class="active" href="#">Directory</a>
+                <a class="active" href="discover.html">Discover</a>
+            </li>
+            <li>
+                <a class="active" href="directory.html">Directory</a>
             </li>
             <li>
                 <a class="active" href="#">Join</a>
             </li>
             <li>
-                <a class="active" href="#">Contact</a>
+                <a class="active" href="contact.html">Contact</a>
             </li>
 
         </ul>
