--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -35,16 +35,16 @@
         <ul id="primaryNav">
 
             <li>
-                <a class="active" href="discovery.html">Discover</a>
+                <a class="active" href="discover.html">Discover</a>
             </li>
             <li>
                 <a class="active" href="directory.html">Directory</a>
             </li>
             <li>
-                <a class="active" href="#">Join</a>
+                <a class="active" href="join.html">Join</a>
             </li>
             <li>
-                <a class="active" href="#">Contact</a>
+                <a class="active" href="contact.html">Contact</a>
             </li>
 
         </ul>
@@ -60,7 +60,10 @@
         </ul>
 
     </nav>
-    <p id="p-date"><span id="currentdate"></span></p>
+    <div class="divdate">
+        <p><span id="message"></span></p>
+        <p id="p-date" class="date"></p>
+    </div>
 </header>
 
 <body>
