--- a/chamber/weather-api.html
+++ b/chamber/weather-api.html
@@ -47,7 +47,7 @@
                     <a class="active" href="join.html">Join</a>
                 </li>
                 <li>
-                    <a class="active" href="#">Contact</a>
+                    <a class="active" href="contact.html">Contact</a>
                 </li>
 
             </ul>
