--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -29,6 +29,8 @@
             <p>and the Chamber of Commerce</p>
         </li>
     </ul>
+
+
     <nav class="nav">
         <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
         <ul id="primaryNav">
@@ -38,6 +40,7 @@
             <li>
                 <a class="active" href="discover.html">Discover</a>
             </li>
+
             <li>
                 <a class="active" href="join.html">Join</a>
             </li>
@@ -58,9 +61,9 @@
         </ul>
 
     </nav>
-    <div class="date">
+    <div class="divdate">
         <p><span id="message"></span></p>
-        <p id="p-date"><span class="date"></span></p>
+        <p id="p-date" class="date"></p>
     </div>
 </header>
 
