--- a/chamber/index.html
+++ b/chamber/index.html
@@ -82,7 +82,10 @@
             <div id="weather-large" class="weather large-div">
                 <div>
                     <p>The current temperature in West Valley City, Utah is <span id="current-temp"></span> &deg;F</p>
-                    <h2>Current Condition Icon</h2>
+                    <p>The current Humidity in West Valley City, Utah is <span id="humidity"></span></p>
+                    <p>The current Windspeed in West Valley City, Utah is <span id="windspeed"></span></p>
+                    <p>The current windchill in West Valley City, Utah is <span id="windchill"></span></p>
+                    <h2>Current Weather Condition</h2>
                     <figure>
                         <img src="" alt="" id="weather-icon" />
                         <figcaption></figcaption>
