--- a/chamber/index.html
+++ b/chamber/index.html
@@ -73,7 +73,7 @@
             <div id="event-large" class="event large-div">
                 <h2>Triwizard Tournament</h2>
                 <img class="div-image" src="images/2730338_colour_dragon_egg_harry_magic_icon.png" alt="Dragon Egg">
-                <p>The first task in the Triwizard Tournament is complete!<br> Now our contestants will have to figure out what the next task is. <a href="https://harrypotter.fandom.com/wiki/Golden_egg">more info...</a></p>
+                <p>The first task in the Triwizard Tournament is complete!<br> Now our contestants will have to figure out what the next task is. <br><a href="https://harrypotter.fandom.com/wiki/Golden_egg">more info...</a></p>
 
 
 
@@ -187,10 +187,10 @@
             <li>+1(801)231-3935</li>
             <li class="map">
                 <a href="https://www.google.com/maps/place/Salt+Lake+Chamber/@40.7645262,-111.892769,17z/data=!3m2!4b1!5s0x87528a3aa97113a7:0xdb61b5943e1a7aa1!4m5!3m4!1s0x8752f513d6f6ab15:0x4be5eda424cce15a!8m2!3d40.7645222!4d-111.8905803"><img id="map" src="images/pin.png" alt="Location Map"></a>
-                <p>Map Location</p>
+                <p id="map-p">Map Location</p>
             </li>
         </ul>
-        <p class="js">
+        <p class="js" id="js-p">
             &copy;2022 | Harry Potter and the Chamber of Commerce | Nikkolet Ashby | WDD 230 Project | Last Updated: <span id="lastmodified"></span></p>
 
     </footer>
