--- a/chamber/index.html
+++ b/chamber/index.html
@@ -197,7 +197,7 @@
     </footer>
     <script src="js/script.js"></script>
     <script src="js/windchill.js"></script>
-    <script src="js/directory.js"></script>
+    <script src="js/spotlight.js"></script>
     <script src="js/weatherapimain.js"></script>
 </body>
 
